--- a/charts/api-backend/templates/docs-service.yaml
+++ b/charts/api-backend/templates/docs-service.yaml
@@ -1,13 +1,9 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "api-backend.fullname" . }}
+  name: {{ include "api-backend.fullname" . }}-docs
   labels:
     {{- include "api-backend.labels" . | nindent 4 }}
-  {{- with .Values.service.annotations }}
-  annotations:
-    {{- toYaml . | nindent 4 }}
-  {{- end }}
 spec:
   type: {{ .Values.service.type }}
   ports:
